https://kanbanflow.com/t/kPc5JsPu

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,16 @@
                     <target>${jdk.version}</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>5.2.4</version>
+                <configuration>
+                    <url>jdbc:postgresql://localhost:5432/trainer_crm_db</url>
+                    <user>postgres</user>
+                    <password>Sun127273rise</password>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -32,6 +42,11 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.5</version>
         </dependency>
     </dependencies>
 
